--- a/css/styles.css
+++ b/css/styles.css
@@ -211,9 +211,10 @@ header {
   color: #ffffff;
 }
 
-.header button {
+.blue-btn {
   margin-top: 30px;
-  padding: 10px 41px;
+  width: 200px;
+  height: 50px;
 
   background: var(--main-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -657,7 +658,7 @@ footer .container {
   position: absolute;
   width: 528px;
   height: 581px;
-
+  padding: 40px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -684,4 +685,82 @@ footer .container {
   transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),
     transform 0.5s cubic-bezier(0.4, 0, 0.2, 1),
     visibility 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/*=========== SIGNUP FORM ===========*/
+.form {
+  text-align: center;
+}
+
+.form-header {
+  font-family: var(--main-font);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  margin-top: 0;
+}
+
+.signup-form-label {
+  display: block;
+  font-style: var(--main-font);
+  color: #757575;
+  font-size: 12px;
+  letter-spacing: 0.01em;
+  text-align: left;
+  line-height: 1.167;
+  margin-top: 10px;
+  margin-bottom: 4px;
+}
+
+.signup-form-input {
+  display: flex;
+  align-items: center;
+  height: 40px;
+  margin-bottom: 10px;
+  padding: 0 14px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.signup-form-input input {
+  width: 100%;
+  border: none;
+}
+
+.signup-form-label-regulations {
+  display: flex;
+}
+
+.signup-form-textarea {
+  height: 120px;
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.signup-form-textarea::placeholder {
+  font-family: var(--main-font);
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.01em;
+  color: #75757580;
+}
+.signup-form-label-regulations a {
+  color: var(--main-color);
+}
+.regulations-description {
+  font-family: var(--main-font);
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.signup-form-icon {
+margin-right: 15px;
 }
