--- a/css/styles.css
+++ b/css/styles.css
@@ -722,8 +722,18 @@ footer .container {
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
+
+.signup-form-input:hover,
+.signup-form-input:focus,
+.signup-form-textarea:hover,
+.signup-form-textarea:focus {
+  fill: var(--main-color);
+  border-color: var(--main-color);
+}
+
 .signup-form-input input {
   width: 100%;
   border: none;
@@ -736,6 +746,7 @@ footer .container {
 .signup-form-textarea {
   height: 120px;
   width: 100%;
+  resize: none;
   margin-bottom: 20px;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -762,5 +773,34 @@ footer .container {
 }
 
 .signup-form-icon {
-margin-right: 15px;
+  margin-right: 15px;
+}
+
+.regulations-description::before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid black;
+  border-radius: 2px;
+}
+
+.signup-form-checkbox:checked + .regulations-description::before {
+  background-color: var(--main-color);
+  border: none;
+  background-image: url(../images/accept.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+  }
+
+.visualy-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px 1px 1px 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
 }
