--- a/css/styles.css
+++ b/css/styles.css
@@ -212,6 +212,9 @@ header {
 }
 
 .blue-btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 30px;
   width: 200px;
   height: 50px;
@@ -479,7 +482,8 @@ footer .container {
   letter-spacing: 0.03em;
   color: #ffffff;
 }
-.social-list-footer-title {
+.social-list-footer-title,
+.newsletter-in-footer-title {
   font-family: var(--main-font);
   font-weight: 700;
   text-transform: uppercase;
@@ -512,6 +516,44 @@ footer .container {
 }
 .social-list-footer-item:last-child {
   margin-right: 0;
+}
+.newsletter-in-footer {
+  margin-left: 78px;
+}
+
+.newsletter-input-container {
+  display: flex;
+}
+
+.newsletter-in-footer button {
+  margin-top: 0;
+}
+
+.newsletter-input {
+  display: flex;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  margin-right: 12px;
+  background-color: #2f303a;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+
+.newsletter-input input {
+  color: #fff;
+  border: none;
+  background-color: transparent;
+  width: 100%;
+  padding: 15px 16px;
+}
+#newsletter-email::placeholder {
+  font-family: var(--main-font);
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.newsletter-icon {
+  margin-left: 24px;
 }
 
 /*=========== PORTFOLIO ===========*/
@@ -722,8 +764,8 @@ footer .container {
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .signup-form-input:hover,
@@ -741,6 +783,7 @@ footer .container {
 
 .signup-form-label-regulations {
   display: flex;
+  justify-content: center;
 }
 
 .signup-form-textarea {
@@ -791,8 +834,9 @@ footer .container {
   background-image: url(../images/accept.svg);
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
-  }
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .visualy-hidden {
   position: absolute !important;
