--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,6 @@ header {
   height: 120px;
   border-radius: 4px;
   background-color: #f5f4fa;
-  margin-right: 30px;
   margin-bottom: 30px;
   align-items: center;
   justify-content: center;
@@ -273,14 +272,13 @@ header {
 .grid {
   display: flex;
   flex-wrap: wrap;
+  margin-left: -30px;
 }
 .grid-item {
-  flex-basis: calc(100% / 4 - 22.5px);
-  margin-right: 30px;
+  flex-basis: calc(100% / 4 - 30px);
+  margin-left: 30px;
 }
-.grid-item:last-child {
-  margin-right: 0;
-}
+
 
 /*Section "Czym się zajmujemy*/
 h2 {
